<resources>
    <string name="app_name">金亚洲</string>
    <string name="is_ssc_shi_title">XXXX</string>
    <string name="is_qv_add">+</string>
    <string name="is_qv_remove">-</string>
    <string name="is_alert_dialog_title">提示信息</string>
    <string name="is_alert_dialog_cancel">取消</string>
    <string name="is_alert_dialog_ok">确定</string>
    <string name="mmc_dialog_again">再玩一次</string>
    <string name="mmc_dialog_double">翻倍再玩一次</string>
    <string name="is_shopping_list_tip" formatted="false">
        <![CDATA[
        <DIV>注数:<font color="#ff0000">NOTE</font>注</DIV>
        <DIV>模&nbsp;&nbsp;式:<font color="#ff0000">UNIT</font>模式</DIV>
        <DIV>倍&nbsp;&nbsp;数:<font color="#ff0000">DOUBLE</font>倍</DIV>
        <DIV>总 金 额:¥<font color="#ff0000">MONEY</font></DIV>
        ]]>
    </string>
    <string name="is_shopping_list_tip_mmc" formatted="false">
        <![CDATA[
        注数:<font color="#ff0000">NOTE</font>注<br>
        模&nbsp;&nbsp;式:<font color="#ff0000">UNIT</font>模式<br>
        倍&nbsp;&nbsp;数:<font color="#ff0000">DOUBLE</font>倍<br>
        总 金 额:¥<font color="#ff0000">MONEY</font><br>
        ]]>
    </string>
    <string name="is_shopping_list_chasetip" formatted="false">
        <![CDATA[
        <DIV>追号期数:<font color="#ff0000">CHASENUM</font>&nbsp;期</DIV>
        <DIV>追中即停:<font color="#ff0000">STATUS</font></DIV>
        <DIV>注数:<font color="#ff0000">NOTE</font>注</DIV>
        <DIV>模&nbsp;&nbsp;式:<font color="#ff0000">UNIT</font>模式</DIV>
        <DIV>总 金 额:¥<font color="#ff0000">MONEY</font></DIV>
        ]]>
    </string>
    <string name="is_multiline_tip" formatted="false">
        <![CDATA[
        请把号码输入或粘贴到此框中：
        1、一注号码中，每位之间用连接符-或逗号,隔开。
        2、每注号码之间用空格或换行隔开。
        如： SHOW1 或 SHOW2
        ]]>
    </string>
    <string name="is_recharge_orders" formatted="false">
        <![CDATA[
            订&nbsp;&nbsp;单&nbsp;&nbsp;号:ORDERS
        ]]>
    </string>
    <string name="is_recharge_payamt" formatted="false">
        <![CDATA[
            订单金额:<font color="#ff0000">PAYAMT</font> 元
        ]]>
    </string>
    <string name="is_shopping_note" formatted="false">
        <![CDATA[
            <font color="#129FB4">NOTE</font> 注
        ]]>
    </string>
    <string name="is_betting_tips" formatted="false">
        <![CDATA[
            注数&nbsp;&nbsp;<font color="#ee7e45">NOTICE</font>&nbsp;&nbsp;注  金额&nbsp;&nbsp;<font color="#ee7e45">MONEY</font>&nbsp;&nbsp;元
        ]]>
    </string>
    <string name="is_chasemete_tips" formatted="false">
        <![CDATA[
            追&nbsp;&nbsp;<font color="#ee7e45">CHASEMETE</font>&nbsp;&nbsp;期
            &nbsp;&nbsp;&nbsp;&nbsp;
            金额&nbsp;&nbsp;<font color="#ee7e45">CHASETOTAL</font>&nbsp;&nbsp;元
        ]]>
    </string>
    <string name="is_balance_tips" formatted="false">
        <![CDATA[
            余额 &nbsp;&nbsp;<font color="#ee7e45">BALANCE</font>&nbsp;&nbsp;元
        ]]>
    </string>
    <string name="is_buy_succeed_tips" formatted="false">
        <![CDATA[
            <DIV>订单编号:<font>ORDER_TIP</font></DIV>
            <DIV>总金额:¥<font color="#ee7e45">BALANCE</font>元</DIV>
        ]]>
    </string>
    <string name="dinpayxml" formatted="false">
        <![CDATA[
        <?xml version=\"1.0\" encoding=\"utf-8\"?>
        <dinpay>
            <request>
                <merchant_code>MERCHANTCODE</merchant_code>
                <notify_url>NOTIFYURL</notify_url>
                <interface_version>INTERFACEVERSION</interface_version>
                <sign_type>SIGNTYPE</sign_type>
                <sign>SIGN</sign>
                <trade>
                    <order_no>ORDERNUMBER</order_no>
                    <order_time>ORDERTIME</order_time>
                    <order_amount>ORDERAMOUNT</order_amount>
                    <product_name>PRODUCTNAME</product_name>
                    <redo_flag>REDOFLAG</redo_flag>
                    <product_code>PRODUCTCODE</product_code>
                    <product_num>PRODUCTNUM</product_num>
                    <product_desc>PRODUCTDESC</product_desc>
                    <extra_return_param>EXTRARETURNPARAM</extra_return_param>
                    <extend_param>EXTENDPARAM</extend_param>
                </trade>
            </request>
        </dinpay>
        ]]>
    </string>
    <string name="single_tip" formatted="false">
        <![CDATA[
        提示：
        \n请把您已有的大底号码复制或者输入到下边文本框中。
        \n每一注号码之间的间隔符支持 回车 空格 分号[;] 冒号[:] 竖杠[|] 点[.]，
        \n每注号码每位之间不使用任何分隔符。
        \n仅支持单式。
        \n例如：123 112
        ]]>
    </string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="button_ok">OK</string>
    <string name="button_product_search">Product search</string>
    <string name="button_web_search">Web search</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="result_product">Found product</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="button_show_map">Show map</string>
    <string name="button_get_directions">Get directions</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="button_dial">Dial number</string>
    <string name="button_add_contact">Add contact</string>
    <string name="result_tel">Found phone number</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_mms">Send MMS</string>
    <string name="result_sms">Found SMS address</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="button_book_search">Book Search</string>
    <string name="result_isbn">Found book</string>
    <string name="result_text">Found plain text</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_default_format">Format</string>
    <string name="menu_share">Share</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="menu_history">History</string>
    <string name="dantiao_3d_item2"><![CDATA[<3注]]></string>
    <string name="dantiao_3d_item3"><![CDATA[<=2注]]></string>
    <string name="dantiao_3d_item4"><![CDATA[<=1注]]></string>
    <string name="dantiao_pk10_item4"><![CDATA[<=2注]]></string>
    <string name="dantiao_11select5_item1"><![CDATA[<9注]]></string>
    <string name="dantiao_11select5_item2"><![CDATA[<5注]]></string>
    <string name="dantiao_11select5_item3"><![CDATA[<=1注]]></string>
    <string name="dantiao_11select5_item4"><![CDATA[<4注]]></string>
</resources>